# nxcmd

./: .gitignore  README.md  cli.py  install.sh  main.py  model.py  pyproject.toml
src/nxcmd/: __init__.py  cli.py  model.py
src/nxcmd.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
